--- a/src/style/Patient.css
+++ b/src/style/Patient.css
@@ -1,24 +1,25 @@
 .header {
     position: fixed;
     top: 0;
-    
+    left:120;
+    align-items: center;
     width: 100%;
     height: 60px; /* Hauteur du header */
     z-index: 1000;
-   
+}
   
   
-  .lateral {
+  /*.lateral {
     height: calc(
       100vh - 60px
     ); /* Hauteur totale de la fenêtre moins la hauteur du header */
-
+/*
     position: fixed;
-    top:60px; /* Descend la barre de menu sous le header */
+    top:60px; /* Descend la barre de menu sous le header 
     left: 0;
     z-index: 1000;
  
-  }
+  }*/
   
   
   .patient-content {
