--- a/src/style/Patient.css
+++ b/src/style/Patient.css
@@ -23,6 +23,7 @@
   
   
   .patient-content {
+    justify-content: center;
     width: 75%;
     height: calc(100% - 125px); /* Ajuster selon la hauteur de votre header */
     overflow-y: auto;
