--- a/src/style/Patient.css
+++ b/src/style/Patient.css
@@ -1,35 +1,44 @@
+/* Patient.css */
 .header {
-    position: fixed;
-    top: 0;
-    left:120;
-    align-items: center;
-    width: 100%;
-    height: 60px; /* Hauteur du header */
-    z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height:5%;
+  background-color: rgb(173, 188, 240);
+  z-index: 1000;
+  
 }
+
+.lateral {
+  position: fixed;
+  top: 20px; /* Adjust based on the height of the header */
+  left: 120;
+  width: 15%;
+  height: calc(100vh - 60px); /* Adjust based on the height of the header */
+  overflow-y: auto;
+  z-index: 999;
+}
+
+.patient-content-wrapper {
+  margin-left:15%; /* Same as the width of the lateral menu */
+  margin-top: 0px; /* Adjust based on the height of the header */
+  padding: 20px;
   
+}
+
+.patient-content {
+
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  position: absolute; /* Position absolutely to respect the top margin */
+  top: 40px;
+  left:32%;
   
-  /*.lateral {
-    height: calc(
-      100vh - 60px
-    ); /* Hauteur totale de la fenêtre moins la hauteur du header */
-/*
-    position: fixed;
-    top:60px; /* Descend la barre de menu sous le header 
-    left: 0;
-    z-index: 1000;
- 
-  }*/
-  
-  
-  .patient-content {
-    justify-content: center;
-    width: 75%;
-    height: calc(100% - 125px); /* Ajuster selon la hauteur de votre header */
-    overflow-y: auto;
-    padding: 20px;
-    scrollbar-color: rgb(199, 124, 11) rgb(11, 12, 11);
-    scrollbar-width: thin;
-  }
-  
-  
+  width:60%; /* Adjust the width */
+  bottom: 0; /* Ensure it stretches to the bottom */
+  overflow-y: auto; /* Enable scrolling if content exceeds */
+
+}
