--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body{
     /*background:url('./assets/plage.avif');*/
-    background-color: burlywood;
+    background-color: coral;
     background-size: cover;
 }
