--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 body{
-    /*background:url('./assets/plage.avif');*/
-    background-color: coral;
+    background-color: rgb(238, 233, 222);
     background-size: cover;
 }
