--- a/src/style/Patient.css
+++ b/src/style/Patient.css
@@ -4,10 +4,9 @@
   top: 0;
   left: 0;
   width: 100%;
-  height:5%;
+  height: 45px;
   background-color: rgb(173, 188, 240);
   z-index: 1000;
-  
 }
 
 .lateral {
@@ -21,24 +20,21 @@
 }
 
 .patient-content-wrapper {
-  margin-left:15%; /* Same as the width of the lateral menu */
+  margin-left: 15%; /* Same as the width of the lateral menu */
   margin-top: 0px; /* Adjust based on the height of the header */
   padding: 20px;
-  
 }
 
 .patient-content {
-
   background-color: rgba(255, 255, 255, 0.7);
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   position: absolute; /* Position absolutely to respect the top margin */
   top: 40px;
-  left:32%;
-  
-  width:60%; /* Adjust the width */
+  left: 32%;
+
+  width: 60%; /* Adjust the width */
   bottom: 0; /* Ensure it stretches to the bottom */
   overflow-y: auto; /* Enable scrolling if content exceeds */
-
 }
